[package]
name = "junk_file"
version = "0.1.1"
edition = "2021"
description = "The library helps you detect commonly generated junk files like `.DS_Store` or `Thumbs.db`."
license = "MIT OR Apache-2.0"
repository = "https://github.com/amachang/junk_file"
keywords = ["junk", "sindresorhus", "DS_Store", "swp", "eaDir" ]
categories = ["filesystem"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.9.3"

[build-dependencies]
regex = "1.9.3"

